loadbalancer/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: pgl
spec:
  ingressClassName: "caddy"
  rules:
    - host: grafana.punter3.nl
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana
                port:
                  number: 80
